@@ -1823,6 +1823,7 @@
                      (propagate-to-refs var type)
                      (unless (preserve-single-use-debug-var-p call var)
                        (update-dependent-casts leaf arg)
+                       (propagate-ref-dx use arg var)
                        (let ((use-component (node-component use)))
                          (substitute-leaf-if
                           (lambda (ref)
